# candidate_advisor

./: LICENSE  README.md  job_offer.md  profile.md  pyproject.toml  resume.md
src/candidate_advisor/: crew.py  main.py
src/candidate_advisor/config/: agents.yaml  tasks copy.yaml  tasks.yaml
